# omega

./: Cargo.toml  LICENSE  README.md  editor.js  index.html  style.css
pkg/: omega.js  omega_bg.wasm
src/: lib.rs
web/: index.html  style.scss
