[package]
name = "omega"
version = "0.1.0"
description = "WebAssembly front-end for Cycle"
authors = ["hrkz <hugo.frezat@gmail.com>"]

keywords = ["cycle", "front-end", "wasm"]
edition = "2018"
license = "MIT"
readme = "README.md"

homepage = "https://hrkz.github.io/omega"
repository = "https://github.com/hrkz/omega/"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
cycle = { path = "../cycle" }
